@@ -13,6 +13,7 @@ Version 1.0rc to be released
 - Added CHtml::checkBoxList(), CHtml::radioButtonList() (Qiang)
 - Added CHtml::activeCheckBoxList() and CHtml::activeRadioButtonList() (Qiang)
 - Added support for persistent page state (Qiang)
+- Added CDbCommandBuilder::createSearchCondition (Qiang)
 
 Version 1.0b October 24, 2008
 -----------------------------
